src/snapshots/bluetui__help__tests__Adapter-80.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                        s  Scan on/off | p Pairing on/off                       "
"                   o Power on/off | d Discovery on/off | ⇄ Nav                  "
