src/snapshots/bluetui__help__tests__DisplayPasskey-120.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                                                       󱊷   Discard                                                      "
"                                                                                                                        "
