src/snapshots/bluetui__help__tests__DisplayPasskey-121.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                                                       󱊷   Discard                                                       "
"                                                                                                                         "
