src/snapshots/bluetui__help__tests__DisplayPinCode-121.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                                                       󱊷  or ↵  Ok                                                       "
"                                                                                                                         "
