src/snapshots/bluetui__help__tests__DisplayPinCode-81.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                                   󱊷  or ↵  Ok                                   "
"                                                                                 "
